Migrating to Java 21