@@ -28,33 +28,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class __pthread_cond_s {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.unionLayout(
-            Constants$root.C_LONG_LONG$LAYOUT.withName("__wseq"),
-            MemoryLayout.structLayout(
-                Constants$root.C_INT$LAYOUT.withName("__low"),
-                Constants$root.C_INT$LAYOUT.withName("__high")
-            ).withName("__wseq32")
-        ).withName("$anon$0"),
-        MemoryLayout.unionLayout(
-            Constants$root.C_LONG_LONG$LAYOUT.withName("__g1_start"),
-            MemoryLayout.structLayout(
-                Constants$root.C_INT$LAYOUT.withName("__low"),
-                Constants$root.C_INT$LAYOUT.withName("__high")
-            ).withName("__g1_start32")
-        ).withName("$anon$1"),
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("__g_refs"),
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("__g_size"),
-        Constants$root.C_INT$LAYOUT.withName("__g1_orig_size"),
-        Constants$root.C_INT$LAYOUT.withName("__wrefs"),
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("__g_signals")
-    ).withName("__pthread_cond_s");
     public static MemoryLayout $LAYOUT() {
-        return __pthread_cond_s.$struct$LAYOUT;
+        return constants$11.const$1;
     }
-    static final VarHandle __wseq$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("$anon$0"), MemoryLayout.PathElement.groupElement("__wseq"));
     public static VarHandle __wseq$VH() {
-        return __pthread_cond_s.__wseq$VH;
+        return constants$11.const$2;
     }
     /**
      * Getter for field:
@@ -63,7 +41,7 @@ public class __pthread_cond_s {
      * }
      */
     public static long __wseq$get(MemorySegment seg) {
-        return (long)__pthread_cond_s.__wseq$VH.get(seg);
+        return (long)constants$11.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -72,13 +50,13 @@ public class __pthread_cond_s {
      * }
      */
     public static void __wseq$set(MemorySegment seg, long x) {
-        __pthread_cond_s.__wseq$VH.set(seg, x);
+        constants$11.const$2.set(seg, x);
     }
     public static long __wseq$get(MemorySegment seg, long index) {
-        return (long)__pthread_cond_s.__wseq$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$11.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void __wseq$set(MemorySegment seg, long index, long x) {
-        __pthread_cond_s.__wseq$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$11.const$2.set(seg.asSlice(index*sizeof()), x);
     }
     /**
      * {@snippet :
@@ -92,16 +70,11 @@ public class __pthread_cond_s {
 
         // Suppresses default constructor, ensuring non-instantiability.
         private __wseq32() {}
-        static final StructLayout __wseq32$struct$LAYOUT = MemoryLayout.structLayout(
-            Constants$root.C_INT$LAYOUT.withName("__low"),
-            Constants$root.C_INT$LAYOUT.withName("__high")
-        );
         public static MemoryLayout $LAYOUT() {
-            return __wseq32.__wseq32$struct$LAYOUT;
+            return constants$11.const$3;
         }
-        static final VarHandle __low$VH = __wseq32$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__low"));
         public static VarHandle __low$VH() {
-            return __wseq32.__low$VH;
+            return constants$11.const$4;
         }
         /**
          * Getter for field:
@@ -110,7 +83,7 @@ public class __pthread_cond_s {
          * }
          */
         public static int __low$get(MemorySegment seg) {
-            return (int)__wseq32.__low$VH.get(seg);
+            return (int)constants$11.const$4.get(seg);
         }
         /**
          * Setter for field:
@@ -119,17 +92,16 @@ public class __pthread_cond_s {
          * }
          */
         public static void __low$set(MemorySegment seg, int x) {
-            __wseq32.__low$VH.set(seg, x);
+            constants$11.const$4.set(seg, x);
         }
         public static int __low$get(MemorySegment seg, long index) {
-            return (int)__wseq32.__low$VH.get(seg.asSlice(index*sizeof()));
+            return (int)constants$11.const$4.get(seg.asSlice(index*sizeof()));
         }
         public static void __low$set(MemorySegment seg, long index, int x) {
-            __wseq32.__low$VH.set(seg.asSlice(index*sizeof()), x);
+            constants$11.const$4.set(seg.asSlice(index*sizeof()), x);
         }
-        static final VarHandle __high$VH = __wseq32$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__high"));
         public static VarHandle __high$VH() {
-            return __wseq32.__high$VH;
+            return constants$11.const$5;
         }
         /**
          * Getter for field:
@@ -138,7 +110,7 @@ public class __pthread_cond_s {
          * }
          */
         public static int __high$get(MemorySegment seg) {
-            return (int)__wseq32.__high$VH.get(seg);
+            return (int)constants$11.const$5.get(seg);
         }
         /**
          * Setter for field:
@@ -147,28 +119,27 @@ public class __pthread_cond_s {
          * }
          */
         public static void __high$set(MemorySegment seg, int x) {
-            __wseq32.__high$VH.set(seg, x);
+            constants$11.const$5.set(seg, x);
         }
         public static int __high$get(MemorySegment seg, long index) {
-            return (int)__wseq32.__high$VH.get(seg.asSlice(index*sizeof()));
+            return (int)constants$11.const$5.get(seg.asSlice(index*sizeof()));
         }
         public static void __high$set(MemorySegment seg, long index, int x) {
-            __wseq32.__high$VH.set(seg.asSlice(index*sizeof()), x);
+            constants$11.const$5.set(seg.asSlice(index*sizeof()), x);
         }
         public static long sizeof() { return $LAYOUT().byteSize(); }
         public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
         public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
             return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
         }
-        public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+        public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
     }
 
     public static MemorySegment __wseq32$slice(MemorySegment seg) {
         return seg.asSlice(0, 8);
     }
-    static final VarHandle __g1_start$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("$anon$1"), MemoryLayout.PathElement.groupElement("__g1_start"));
     public static VarHandle __g1_start$VH() {
-        return __pthread_cond_s.__g1_start$VH;
+        return constants$12.const$0;
     }
     /**
      * Getter for field:
@@ -177,7 +148,7 @@ public class __pthread_cond_s {
      * }
      */
     public static long __g1_start$get(MemorySegment seg) {
-        return (long)__pthread_cond_s.__g1_start$VH.get(seg);
+        return (long)constants$12.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -186,13 +157,13 @@ public class __pthread_cond_s {
      * }
      */
     public static void __g1_start$set(MemorySegment seg, long x) {
-        __pthread_cond_s.__g1_start$VH.set(seg, x);
+        constants$12.const$0.set(seg, x);
     }
     public static long __g1_start$get(MemorySegment seg, long index) {
-        return (long)__pthread_cond_s.__g1_start$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$12.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void __g1_start$set(MemorySegment seg, long index, long x) {
-        __pthread_cond_s.__g1_start$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$12.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     /**
      * {@snippet :
@@ -206,16 +177,11 @@ public class __pthread_cond_s {
 
         // Suppresses default constructor, ensuring non-instantiability.
         private __g1_start32() {}
-        static final StructLayout __g1_start32$struct$LAYOUT = MemoryLayout.structLayout(
-            Constants$root.C_INT$LAYOUT.withName("__low"),
-            Constants$root.C_INT$LAYOUT.withName("__high")
-        );
         public static MemoryLayout $LAYOUT() {
-            return __g1_start32.__g1_start32$struct$LAYOUT;
+            return constants$11.const$3;
         }
-        static final VarHandle __low$VH = __g1_start32$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__low"));
         public static VarHandle __low$VH() {
-            return __g1_start32.__low$VH;
+            return constants$12.const$1;
         }
         /**
          * Getter for field:
@@ -224,7 +190,7 @@ public class __pthread_cond_s {
          * }
          */
         public static int __low$get(MemorySegment seg) {
-            return (int)__g1_start32.__low$VH.get(seg);
+            return (int)constants$12.const$1.get(seg);
         }
         /**
          * Setter for field:
@@ -233,17 +199,16 @@ public class __pthread_cond_s {
          * }
          */
         public static void __low$set(MemorySegment seg, int x) {
-            __g1_start32.__low$VH.set(seg, x);
+            constants$12.const$1.set(seg, x);
         }
         public static int __low$get(MemorySegment seg, long index) {
-            return (int)__g1_start32.__low$VH.get(seg.asSlice(index*sizeof()));
+            return (int)constants$12.const$1.get(seg.asSlice(index*sizeof()));
         }
         public static void __low$set(MemorySegment seg, long index, int x) {
-            __g1_start32.__low$VH.set(seg.asSlice(index*sizeof()), x);
+            constants$12.const$1.set(seg.asSlice(index*sizeof()), x);
         }
-        static final VarHandle __high$VH = __g1_start32$struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__high"));
         public static VarHandle __high$VH() {
-            return __g1_start32.__high$VH;
+            return constants$12.const$2;
         }
         /**
          * Getter for field:
@@ -252,7 +217,7 @@ public class __pthread_cond_s {
          * }
          */
         public static int __high$get(MemorySegment seg) {
-            return (int)__g1_start32.__high$VH.get(seg);
+            return (int)constants$12.const$2.get(seg);
         }
         /**
          * Setter for field:
@@ -261,20 +226,20 @@ public class __pthread_cond_s {
          * }
          */
         public static void __high$set(MemorySegment seg, int x) {
-            __g1_start32.__high$VH.set(seg, x);
+            constants$12.const$2.set(seg, x);
         }
         public static int __high$get(MemorySegment seg, long index) {
-            return (int)__g1_start32.__high$VH.get(seg.asSlice(index*sizeof()));
+            return (int)constants$12.const$2.get(seg.asSlice(index*sizeof()));
         }
         public static void __high$set(MemorySegment seg, long index, int x) {
-            __g1_start32.__high$VH.set(seg.asSlice(index*sizeof()), x);
+            constants$12.const$2.set(seg.asSlice(index*sizeof()), x);
         }
         public static long sizeof() { return $LAYOUT().byteSize(); }
         public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
         public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
             return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
         }
-        public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+        public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
     }
 
     public static MemorySegment __g1_start32$slice(MemorySegment seg) {
@@ -286,9 +251,8 @@ public class __pthread_cond_s {
     public static MemorySegment __g_size$slice(MemorySegment seg) {
         return seg.asSlice(24, 8);
     }
-    static final VarHandle __g1_orig_size$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__g1_orig_size"));
     public static VarHandle __g1_orig_size$VH() {
-        return __pthread_cond_s.__g1_orig_size$VH;
+        return constants$12.const$3;
     }
     /**
      * Getter for field:
@@ -297,7 +261,7 @@ public class __pthread_cond_s {
      * }
      */
     public static int __g1_orig_size$get(MemorySegment seg) {
-        return (int)__pthread_cond_s.__g1_orig_size$VH.get(seg);
+        return (int)constants$12.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -306,17 +270,16 @@ public class __pthread_cond_s {
      * }
      */
     public static void __g1_orig_size$set(MemorySegment seg, int x) {
-        __pthread_cond_s.__g1_orig_size$VH.set(seg, x);
+        constants$12.const$3.set(seg, x);
     }
     public static int __g1_orig_size$get(MemorySegment seg, long index) {
-        return (int)__pthread_cond_s.__g1_orig_size$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$12.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void __g1_orig_size$set(MemorySegment seg, long index, int x) {
-        __pthread_cond_s.__g1_orig_size$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$12.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle __wrefs$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__wrefs"));
     public static VarHandle __wrefs$VH() {
-        return __pthread_cond_s.__wrefs$VH;
+        return constants$12.const$4;
     }
     /**
      * Getter for field:
@@ -325,7 +288,7 @@ public class __pthread_cond_s {
      * }
      */
     public static int __wrefs$get(MemorySegment seg) {
-        return (int)__pthread_cond_s.__wrefs$VH.get(seg);
+        return (int)constants$12.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -334,13 +297,13 @@ public class __pthread_cond_s {
      * }
      */
     public static void __wrefs$set(MemorySegment seg, int x) {
-        __pthread_cond_s.__wrefs$VH.set(seg, x);
+        constants$12.const$4.set(seg, x);
     }
     public static int __wrefs$get(MemorySegment seg, long index) {
-        return (int)__pthread_cond_s.__wrefs$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$12.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void __wrefs$set(MemorySegment seg, long index, int x) {
-        __pthread_cond_s.__wrefs$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$12.const$4.set(seg.asSlice(index*sizeof()), x);
     }
     public static MemorySegment __g_signals$slice(MemorySegment seg) {
         return seg.asSlice(40, 8);
@@ -350,7 +313,7 @@ public class __pthread_cond_s {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
