@@ -20,15 +20,8 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class drand48_data {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.sequenceLayout(3, Constants$root.C_SHORT$LAYOUT).withName("__x"),
-        MemoryLayout.sequenceLayout(3, Constants$root.C_SHORT$LAYOUT).withName("__old_x"),
-        Constants$root.C_SHORT$LAYOUT.withName("__c"),
-        Constants$root.C_SHORT$LAYOUT.withName("__init"),
-        Constants$root.C_LONG_LONG$LAYOUT.withName("__a")
-    ).withName("drand48_data");
     public static MemoryLayout $LAYOUT() {
-        return drand48_data.$struct$LAYOUT;
+        return constants$21.const$0;
     }
     public static MemorySegment __x$slice(MemorySegment seg) {
         return seg.asSlice(0, 6);
@@ -36,9 +29,8 @@ public class drand48_data {
     public static MemorySegment __old_x$slice(MemorySegment seg) {
         return seg.asSlice(6, 6);
     }
-    static final VarHandle __c$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__c"));
     public static VarHandle __c$VH() {
-        return drand48_data.__c$VH;
+        return constants$21.const$1;
     }
     /**
      * Getter for field:
@@ -47,7 +39,7 @@ public class drand48_data {
      * }
      */
     public static short __c$get(MemorySegment seg) {
-        return (short)drand48_data.__c$VH.get(seg);
+        return (short)constants$21.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -56,17 +48,16 @@ public class drand48_data {
      * }
      */
     public static void __c$set(MemorySegment seg, short x) {
-        drand48_data.__c$VH.set(seg, x);
+        constants$21.const$1.set(seg, x);
     }
     public static short __c$get(MemorySegment seg, long index) {
-        return (short)drand48_data.__c$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$21.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void __c$set(MemorySegment seg, long index, short x) {
-        drand48_data.__c$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$21.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle __init$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__init"));
     public static VarHandle __init$VH() {
-        return drand48_data.__init$VH;
+        return constants$21.const$2;
     }
     /**
      * Getter for field:
@@ -75,7 +66,7 @@ public class drand48_data {
      * }
      */
     public static short __init$get(MemorySegment seg) {
-        return (short)drand48_data.__init$VH.get(seg);
+        return (short)constants$21.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -84,17 +75,16 @@ public class drand48_data {
      * }
      */
     public static void __init$set(MemorySegment seg, short x) {
-        drand48_data.__init$VH.set(seg, x);
+        constants$21.const$2.set(seg, x);
     }
     public static short __init$get(MemorySegment seg, long index) {
-        return (short)drand48_data.__init$VH.get(seg.asSlice(index*sizeof()));
+        return (short)constants$21.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void __init$set(MemorySegment seg, long index, short x) {
-        drand48_data.__init$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$21.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle __a$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("__a"));
     public static VarHandle __a$VH() {
-        return drand48_data.__a$VH;
+        return constants$21.const$3;
     }
     /**
      * Getter for field:
@@ -103,7 +93,7 @@ public class drand48_data {
      * }
      */
     public static long __a$get(MemorySegment seg) {
-        return (long)drand48_data.__a$VH.get(seg);
+        return (long)constants$21.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -112,20 +102,20 @@ public class drand48_data {
      * }
      */
     public static void __a$set(MemorySegment seg, long x) {
-        drand48_data.__a$VH.set(seg, x);
+        constants$21.const$3.set(seg, x);
     }
     public static long __a$get(MemorySegment seg, long index) {
-        return (long)drand48_data.__a$VH.get(seg.asSlice(index*sizeof()));
+        return (long)constants$21.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void __a$set(MemorySegment seg, long index, long x) {
-        drand48_data.__a$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$21.const$3.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
