@@ -15,14 +15,14 @@ import static java.lang.foreign.ValueLayout.*;
 public interface on_exit$__func {
 
     void apply(int _x0, java.lang.foreign.MemorySegment _x1);
-    static MemorySegment allocate(on_exit$__func fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$10.on_exit$__func_UP$MH, fi, constants$10.on_exit$__func$FUNC, scope);
+    static MemorySegment allocate(on_exit$__func fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$26.const$3, fi, constants$26.const$2, scope);
     }
-    static on_exit$__func ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static on_exit$__func ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (int __x0, java.lang.foreign.MemorySegment __x1) -> {
             try {
-                constants$10.on_exit$__func_DOWN$MH.invokeExact(symbol, __x0, __x1);
+                constants$26.const$4.invokeExact(symbol, __x0, __x1);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
