@@ -22,22 +22,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class random_data {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_POINTER$LAYOUT.withName("fptr"),
-        Constants$root.C_POINTER$LAYOUT.withName("rptr"),
-        Constants$root.C_POINTER$LAYOUT.withName("state"),
-        Constants$root.C_INT$LAYOUT.withName("rand_type"),
-        Constants$root.C_INT$LAYOUT.withName("rand_deg"),
-        Constants$root.C_INT$LAYOUT.withName("rand_sep"),
-        MemoryLayout.paddingLayout(32),
-        Constants$root.C_POINTER$LAYOUT.withName("end_ptr")
-    ).withName("random_data");
     public static MemoryLayout $LAYOUT() {
-        return random_data.$struct$LAYOUT;
+        return constants$16.const$0;
     }
-    static final VarHandle fptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("fptr"));
     public static VarHandle fptr$VH() {
-        return random_data.fptr$VH;
+        return constants$16.const$1;
     }
     /**
      * Getter for field:
@@ -46,7 +35,7 @@ public class random_data {
      * }
      */
     public static MemorySegment fptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)random_data.fptr$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$16.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -55,17 +44,16 @@ public class random_data {
      * }
      */
     public static void fptr$set(MemorySegment seg, MemorySegment x) {
-        random_data.fptr$VH.set(seg, x);
+        constants$16.const$1.set(seg, x);
     }
     public static MemorySegment fptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)random_data.fptr$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$16.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void fptr$set(MemorySegment seg, long index, MemorySegment x) {
-        random_data.fptr$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$16.const$1.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle rptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("rptr"));
     public static VarHandle rptr$VH() {
-        return random_data.rptr$VH;
+        return constants$16.const$2;
     }
     /**
      * Getter for field:
@@ -74,7 +62,7 @@ public class random_data {
      * }
      */
     public static MemorySegment rptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)random_data.rptr$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$16.const$2.get(seg);
     }
     /**
      * Setter for field:
@@ -83,17 +71,16 @@ public class random_data {
      * }
      */
     public static void rptr$set(MemorySegment seg, MemorySegment x) {
-        random_data.rptr$VH.set(seg, x);
+        constants$16.const$2.set(seg, x);
     }
     public static MemorySegment rptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)random_data.rptr$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$16.const$2.get(seg.asSlice(index*sizeof()));
     }
     public static void rptr$set(MemorySegment seg, long index, MemorySegment x) {
-        random_data.rptr$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$16.const$2.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle state$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("state"));
     public static VarHandle state$VH() {
-        return random_data.state$VH;
+        return constants$16.const$3;
     }
     /**
      * Getter for field:
@@ -102,7 +89,7 @@ public class random_data {
      * }
      */
     public static MemorySegment state$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)random_data.state$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$16.const$3.get(seg);
     }
     /**
      * Setter for field:
@@ -111,17 +98,16 @@ public class random_data {
      * }
      */
     public static void state$set(MemorySegment seg, MemorySegment x) {
-        random_data.state$VH.set(seg, x);
+        constants$16.const$3.set(seg, x);
     }
     public static MemorySegment state$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)random_data.state$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$16.const$3.get(seg.asSlice(index*sizeof()));
     }
     public static void state$set(MemorySegment seg, long index, MemorySegment x) {
-        random_data.state$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$16.const$3.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle rand_type$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("rand_type"));
     public static VarHandle rand_type$VH() {
-        return random_data.rand_type$VH;
+        return constants$16.const$4;
     }
     /**
      * Getter for field:
@@ -130,7 +116,7 @@ public class random_data {
      * }
      */
     public static int rand_type$get(MemorySegment seg) {
-        return (int)random_data.rand_type$VH.get(seg);
+        return (int)constants$16.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -139,17 +125,16 @@ public class random_data {
      * }
      */
     public static void rand_type$set(MemorySegment seg, int x) {
-        random_data.rand_type$VH.set(seg, x);
+        constants$16.const$4.set(seg, x);
     }
     public static int rand_type$get(MemorySegment seg, long index) {
-        return (int)random_data.rand_type$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$16.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void rand_type$set(MemorySegment seg, long index, int x) {
-        random_data.rand_type$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$16.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle rand_deg$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("rand_deg"));
     public static VarHandle rand_deg$VH() {
-        return random_data.rand_deg$VH;
+        return constants$16.const$5;
     }
     /**
      * Getter for field:
@@ -158,7 +143,7 @@ public class random_data {
      * }
      */
     public static int rand_deg$get(MemorySegment seg) {
-        return (int)random_data.rand_deg$VH.get(seg);
+        return (int)constants$16.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -167,17 +152,16 @@ public class random_data {
      * }
      */
     public static void rand_deg$set(MemorySegment seg, int x) {
-        random_data.rand_deg$VH.set(seg, x);
+        constants$16.const$5.set(seg, x);
     }
     public static int rand_deg$get(MemorySegment seg, long index) {
-        return (int)random_data.rand_deg$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$16.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void rand_deg$set(MemorySegment seg, long index, int x) {
-        random_data.rand_deg$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$16.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle rand_sep$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("rand_sep"));
     public static VarHandle rand_sep$VH() {
-        return random_data.rand_sep$VH;
+        return constants$17.const$0;
     }
     /**
      * Getter for field:
@@ -186,7 +170,7 @@ public class random_data {
      * }
      */
     public static int rand_sep$get(MemorySegment seg) {
-        return (int)random_data.rand_sep$VH.get(seg);
+        return (int)constants$17.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -195,17 +179,16 @@ public class random_data {
      * }
      */
     public static void rand_sep$set(MemorySegment seg, int x) {
-        random_data.rand_sep$VH.set(seg, x);
+        constants$17.const$0.set(seg, x);
     }
     public static int rand_sep$get(MemorySegment seg, long index) {
-        return (int)random_data.rand_sep$VH.get(seg.asSlice(index*sizeof()));
+        return (int)constants$17.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void rand_sep$set(MemorySegment seg, long index, int x) {
-        random_data.rand_sep$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$17.const$0.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle end_ptr$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("end_ptr"));
     public static VarHandle end_ptr$VH() {
-        return random_data.end_ptr$VH;
+        return constants$17.const$1;
     }
     /**
      * Getter for field:
@@ -214,7 +197,7 @@ public class random_data {
      * }
      */
     public static MemorySegment end_ptr$get(MemorySegment seg) {
-        return (java.lang.foreign.MemorySegment)random_data.end_ptr$VH.get(seg);
+        return (java.lang.foreign.MemorySegment)constants$17.const$1.get(seg);
     }
     /**
      * Setter for field:
@@ -223,20 +206,20 @@ public class random_data {
      * }
      */
     public static void end_ptr$set(MemorySegment seg, MemorySegment x) {
-        random_data.end_ptr$VH.set(seg, x);
+        constants$17.const$1.set(seg, x);
     }
     public static MemorySegment end_ptr$get(MemorySegment seg, long index) {
-        return (java.lang.foreign.MemorySegment)random_data.end_ptr$VH.get(seg.asSlice(index*sizeof()));
+        return (java.lang.foreign.MemorySegment)constants$17.const$1.get(seg.asSlice(index*sizeof()));
     }
     public static void end_ptr$set(MemorySegment seg, long index, MemorySegment x) {
-        random_data.end_ptr$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$17.const$1.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
