@@ -15,14 +15,14 @@ import static java.lang.foreign.ValueLayout.*;
 public interface rs2_calibration_change_callback_ptr {
 
     void apply(int _x0, java.lang.foreign.MemorySegment arg);
-    static MemorySegment allocate(rs2_calibration_change_callback_ptr fi, SegmentScope scope) {
-        return RuntimeHelper.upcallStub(constants$89.rs2_calibration_change_callback_ptr_UP$MH, fi, constants$89.rs2_calibration_change_callback_ptr$FUNC, scope);
+    static MemorySegment allocate(rs2_calibration_change_callback_ptr fi, Arena scope) {
+        return RuntimeHelper.upcallStub(constants$122.const$4, fi, constants$26.const$2, scope);
     }
-    static rs2_calibration_change_callback_ptr ofAddress(MemorySegment addr, SegmentScope scope) {
-        MemorySegment symbol = MemorySegment.ofAddress(addr.address(), 0, scope);
+    static rs2_calibration_change_callback_ptr ofAddress(MemorySegment addr, Arena arena) {
+        MemorySegment symbol = addr.reinterpret(arena, null);
         return (int __x0, java.lang.foreign.MemorySegment _arg) -> {
             try {
-                constants$89.rs2_calibration_change_callback_ptr_DOWN$MH.invokeExact(symbol, __x0, _arg);
+                constants$26.const$4.invokeExact(symbol, __x0, _arg);
             } catch (Throwable ex$) {
                 throw new AssertionError("should not reach here", ex$);
             }
