@@ -17,12 +17,8 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class rs2_extrinsics {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.sequenceLayout(9, Constants$root.C_FLOAT$LAYOUT).withName("rotation"),
-        MemoryLayout.sequenceLayout(3, Constants$root.C_FLOAT$LAYOUT).withName("translation")
-    ).withName("rs2_extrinsics");
     public static MemoryLayout $LAYOUT() {
-        return rs2_extrinsics.$struct$LAYOUT;
+        return constants$98.const$2;
     }
     public static MemorySegment rotation$slice(MemorySegment seg) {
         return seg.asSlice(0, 36);
@@ -35,7 +31,7 @@ public class rs2_extrinsics {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
