@@ -16,11 +16,8 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class rs2_pixel {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        MemoryLayout.sequenceLayout(2, Constants$root.C_INT$LAYOUT).withName("ij")
-    ).withName("rs2_pixel");
     public static MemoryLayout $LAYOUT() {
-        return rs2_pixel.$struct$LAYOUT;
+        return constants$91.const$2;
     }
     public static MemorySegment ij$slice(MemorySegment seg) {
         return seg.asSlice(0, 8);
@@ -30,7 +27,7 @@ public class rs2_pixel {
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
