@@ -18,17 +18,11 @@ import static java.lang.foreign.ValueLayout.*;
  */
 public class rs2_vector {
 
-    static final StructLayout $struct$LAYOUT = MemoryLayout.structLayout(
-        Constants$root.C_FLOAT$LAYOUT.withName("x"),
-        Constants$root.C_FLOAT$LAYOUT.withName("y"),
-        Constants$root.C_FLOAT$LAYOUT.withName("z")
-    ).withName("rs2_vector");
     public static MemoryLayout $LAYOUT() {
-        return rs2_vector.$struct$LAYOUT;
+        return constants$91.const$3;
     }
-    static final VarHandle x$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("x"));
     public static VarHandle x$VH() {
-        return rs2_vector.x$VH;
+        return constants$91.const$4;
     }
     /**
      * Getter for field:
@@ -37,7 +31,7 @@ public class rs2_vector {
      * }
      */
     public static float x$get(MemorySegment seg) {
-        return (float)rs2_vector.x$VH.get(seg);
+        return (float)constants$91.const$4.get(seg);
     }
     /**
      * Setter for field:
@@ -46,17 +40,16 @@ public class rs2_vector {
      * }
      */
     public static void x$set(MemorySegment seg, float x) {
-        rs2_vector.x$VH.set(seg, x);
+        constants$91.const$4.set(seg, x);
     }
     public static float x$get(MemorySegment seg, long index) {
-        return (float)rs2_vector.x$VH.get(seg.asSlice(index*sizeof()));
+        return (float)constants$91.const$4.get(seg.asSlice(index*sizeof()));
     }
     public static void x$set(MemorySegment seg, long index, float x) {
-        rs2_vector.x$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$91.const$4.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle y$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("y"));
     public static VarHandle y$VH() {
-        return rs2_vector.y$VH;
+        return constants$91.const$5;
     }
     /**
      * Getter for field:
@@ -65,7 +58,7 @@ public class rs2_vector {
      * }
      */
     public static float y$get(MemorySegment seg) {
-        return (float)rs2_vector.y$VH.get(seg);
+        return (float)constants$91.const$5.get(seg);
     }
     /**
      * Setter for field:
@@ -74,17 +67,16 @@ public class rs2_vector {
      * }
      */
     public static void y$set(MemorySegment seg, float x) {
-        rs2_vector.y$VH.set(seg, x);
+        constants$91.const$5.set(seg, x);
     }
     public static float y$get(MemorySegment seg, long index) {
-        return (float)rs2_vector.y$VH.get(seg.asSlice(index*sizeof()));
+        return (float)constants$91.const$5.get(seg.asSlice(index*sizeof()));
     }
     public static void y$set(MemorySegment seg, long index, float x) {
-        rs2_vector.y$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$91.const$5.set(seg.asSlice(index*sizeof()), x);
     }
-    static final VarHandle z$VH = $struct$LAYOUT.varHandle(MemoryLayout.PathElement.groupElement("z"));
     public static VarHandle z$VH() {
-        return rs2_vector.z$VH;
+        return constants$92.const$0;
     }
     /**
      * Getter for field:
@@ -93,7 +85,7 @@ public class rs2_vector {
      * }
      */
     public static float z$get(MemorySegment seg) {
-        return (float)rs2_vector.z$VH.get(seg);
+        return (float)constants$92.const$0.get(seg);
     }
     /**
      * Setter for field:
@@ -102,20 +94,20 @@ public class rs2_vector {
      * }
      */
     public static void z$set(MemorySegment seg, float x) {
-        rs2_vector.z$VH.set(seg, x);
+        constants$92.const$0.set(seg, x);
     }
     public static float z$get(MemorySegment seg, long index) {
-        return (float)rs2_vector.z$VH.get(seg.asSlice(index*sizeof()));
+        return (float)constants$92.const$0.get(seg.asSlice(index*sizeof()));
     }
     public static void z$set(MemorySegment seg, long index, float x) {
-        rs2_vector.z$VH.set(seg.asSlice(index*sizeof()), x);
+        constants$92.const$0.set(seg.asSlice(index*sizeof()), x);
     }
     public static long sizeof() { return $LAYOUT().byteSize(); }
     public static MemorySegment allocate(SegmentAllocator allocator) { return allocator.allocate($LAYOUT()); }
     public static MemorySegment allocateArray(long len, SegmentAllocator allocator) {
         return allocator.allocate(MemoryLayout.sequenceLayout(len, $LAYOUT()));
     }
-    public static MemorySegment ofAddress(MemorySegment addr, SegmentScope scope) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, scope); }
+    public static MemorySegment ofAddress(MemorySegment addr, Arena arena) { return RuntimeHelper.asArray(addr, $LAYOUT(), 1, arena); }
 }
 
 
